Modified Front Page Features Links to adjust position of text icon and fix border size on small.

--- a/assets/css/bajapsa.css
+++ b/assets/css/bajapsa.css
@@ -1587,12 +1587,15 @@ ul.inline, ul.links.inline {
           border: 4px solid #498fe1;
           height: 70px;
           width: 70px;
-          padding: 15px; } }
+          padding: 15px; }
+          .front-page__section-featured-links .featured-link .fa:hover {
+            border: 4px solid #2375d4;
+            transition: .4s; } }
     .front-page__section-featured-links .featured-link .fa-file-text-o {
       padding: 30px 25px 30px 35px; }
       @media screen and (max-width: 768px) {
         .front-page__section-featured-links .featured-link .fa-file-text-o {
-          padding: 15px 12px 15px 18px; } }
+          padding: 15px 10px 15px 20px; } }
     .front-page__section-featured-links .featured-link h4 {
       max-width: 180px;
       margin: 0 auto; }
